# hummingbird

./: .envrc  Cargo.toml
examples/more-grid/: chat.md  flow.lua  grid.lua  hello.py  justfile  pyproject.toml  visualise.py
examples/more-grid/lmrsim/: blocks.list  config
examples/more-grid/lmrsim/grid/: grid-0000  grid-0000.metadata
examples/more-grid/lmrsim/vtk/: fluid-s0000-b0000.vtu  fluid-s0000.pvtu  fluid-s0001-b0000.vtu  fluid-s0001.pvtu  fluid.pvd
src/: grid.rs  main.rs
