[project]
name = "simple-grid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.29.0",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "pygments>=2.18.0",
    "pyqt5>=5.15.11",
    "pyvista>=0.44.2",
    "pyvistaqt>=0.11.1",
]
